--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="retry">RETRY</string>
     <string name="no_movies_here">No movies here</string>
     <string name="title_activity_movie_details">MovieDetailsActivity</string>
+    <string name="loading">Loading...</string>
+    <string name="release_date">Release date:</string>
 
 </resources>
