--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PopularMovies</string>
+    <string name="app_name">Popular Movies</string>
     <!--YOUR_API_KEY_HERE-->
     <string name="api_key">a780e4ca292bd0d419c740b86d62b4ea</string>
 
@@ -7,9 +7,11 @@
 
     <string name="no_network_connection">No network connection</string>
     <string name="retry">RETRY</string>
-    <string name="no_movies_here">No movies here</string>
+    <string name="no_movies_found">No movies found</string>
     <string name="title_activity_movie_details">MovieDetailsActivity</string>
     <string name="loading">Loading...</string>
     <string name="release_date">Release date:</string>
+    <string name="genre">Genre:</string>
+    <string name="retry_button">Retry</string>
 
 </resources>
