--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="show_more">Show More</string>
     <string name="show_less">Show Less</string>
     <string name="no_reviews_yet">No reviews yet</string>
+    <string name="add_movies_to_favourites">Add movies to favourites</string>
 
 </resources>
